Se añadieron configuraciones por código para conexión con red local y pruebas api

--- a/Birlik_Mobile/Birlik_Mobile.csproj
+++ b/Birlik_Mobile/Birlik_Mobile.csproj
@@ -13,7 +13,14 @@
             either BOTH runtimes must be indicated or ONLY macatalyst-x64. -->
         <!-- For example: <RuntimeIdentifiers>maccatalyst-x64;maccatalyst-arm64</RuntimeIdentifiers> -->
 
-        <OutputType>Exe</OutputType>
+		<ApplicationId>com.companyname.birlik_mobile</ApplicationId>
+		<AndroidPackageFormat>aab</AndroidPackageFormat>
+		<UseMaui>true</UseMaui>
+
+
+
+
+		<OutputType>Exe</OutputType>
         <RootNamespace>Birlik_Mobile</RootNamespace>
         <UseMaui>true</UseMaui>
         <SingleProject>true</SingleProject>
@@ -61,9 +68,19 @@
     </ItemGroup>
 
     <ItemGroup>
+      <None Remove="Platforms\Android\Resources\xml\network_security_config.xml" />
+    </ItemGroup>
+
+    <ItemGroup>
         <PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
         <PackageReference Include="Microsoft.AspNetCore.Components.WebView.Maui" Version="$(MauiVersion)" />
         <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="9.0.5" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <AndroidResource Update="Platforms\Android\Resources\xml\network_security_config.xml">
+        <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+      </AndroidResource>
     </ItemGroup>
 
 </Project>
