--- a/Birlik_Mobile/Birlik_Mobile.csproj
+++ b/Birlik_Mobile/Birlik_Mobile.csproj
@@ -83,4 +83,8 @@
       </AndroidResource>
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="wwwroot\resources\img\" />
+    </ItemGroup>
+
 </Project>
