--- a/Birlik_Mobile/Birlik_Mobile.csproj
+++ b/Birlik_Mobile/Birlik_Mobile.csproj
@@ -56,12 +56,12 @@
 
     <ItemGroup>
         <!-- App Icon -->
-        <MauiIcon Include="Resources\AppIcon\appicon.svg" ForegroundFile="Resources\AppIcon\birlikicon.png" />
+        <MauiIcon Include="Resources\AppIcon\appicon.svg" ForegroundFile="Resources\AppIcon\appiconfg.svg" Color="#512BD4" />
 
         <!-- Splash Screen -->
-		<MauiSplashScreen Include="Resources\Splash\birlikicon.png" Color="#0046AD" BaseSize="128,128" />
+        <MauiSplashScreen Include="Resources\Splash\splash.svg" Color="#512BD4" BaseSize="128,128" />
 
-		<!-- Images -->
+        <!-- Images -->
         <MauiImage Include="Resources\Images\*" />
         <MauiImage Update="Resources\Images\dotnet_bot.svg" BaseSize="168,208" />
 
@@ -73,7 +73,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <AndroidResource Remove="Platforms\Android\Resources\drawable\birlik_icono.png" />
+      <AndroidResource Remove="Platforms\Android\Resources\drawable\Birlik_Icono.png" />
     </ItemGroup>
 
     <ItemGroup>
